# Detours

./: CMakeLists.txt  CMakeLists.txt.in
samples/payload/: payload.cpp  payloadtarget.cpp
src/: creatwth.cpp  detours.cpp  detours.h  modules.cpp  uimports.cpp  yapi.hpp
tests/: test_module_api.cpp
vc/: Detours.vcxproj  Detours.vcxproj.filters
